<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginBottom="39dp"
        android:text="@string/title_main"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/idSpiner"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044" />

    <Spinner
        android:id="@+id/idSpiner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="593dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/nameEvent"
        android:layout_width="319dp"
        android:layout_height="39dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="21dp"
        android:ems="10"
        android:hint="@string/label_name_event"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/dateInit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSpiner" />

    <EditText
        android:id="@+id/dateInit"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="22dp"
        android:ems="10"
        android:hint="@string/label_date_init"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/dateEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEvent" />

    <EditText
        android:id="@+id/dateEnd"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:hint="@string/label_date_end"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateInit" />


    <Switch
        android:id="@+id/switchEvent"
        android:layout_width="157dp"
        android:layout_height="32dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="25dp"
        android:text="@string/label_duration_event"
        android:textOff="@string/label_si"
        android:textOn="@string/label_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEnd"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:hint="@string/label_description_event"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchEvent" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="24dp"
        android:text="@string/label_button_confirm"
        app:layout_constraintEnd_toStartOf="@+id/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="71dp"
        android:layout_marginEnd="32dp"
        android:text="@string/label_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirm"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />


</androidx.constraintlayout.widget.ConstraintLayout>